feat: 增加3个音效

--- a/source/popup.html
+++ b/source/popup.html
@@ -402,6 +402,17 @@
         </div>
     </div>
 
+    <!-- 音效元素 -->
+    <audio id="workCompleteSound" preload="auto">
+        <source src="sounds/work-complete.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="breakCompleteSound" preload="auto">
+        <source src="sounds/break-complete.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="timerStartSound" preload="auto">
+        <source src="sounds/timer-start.mp3" type="audio/mpeg">
+    </audio>
+
     <script src="popup.js"></script>
 </body>
 </html>
