--- a/source/notification.html
+++ b/source/notification.html
@@ -125,16 +125,6 @@
             }
         }
         
-        .sound-status {
-            margin-top: 20px;
-            font-size: 14px;
-            opacity: 0.8;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 8px 16px;
-            border-radius: 20px;
-            backdrop-filter: blur(5px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-        }
     </style>
 </head>
 <body>
@@ -144,10 +134,9 @@
         <div class="title" id="title">时间提醒</div>
         <div class="message" id="message">专注时间已结束</div>
         <div class="buttons">
-            <button class="btn btn-primary" id="openMain">打开主界面</button>
-            <button class="btn" id="closeWindow">关闭窗口</button>
+            <button class="btn btn-primary" id="continueTimer">继续计时</button>
+            <button class="btn" id="closeWindow">我知道了</button>
         </div>
-        <div class="sound-status" id="soundStatus">正在播放音效...</div>
     </div>
 
     <!-- 音效元素 -->
