--- a/source/popup.html
+++ b/source/popup.html
@@ -42,8 +42,10 @@
     <div id="settingsModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3>设置</h3>
-                <button id="closeSettings" class="close-btn">&times;</button>
+                <div class="header-left">
+                    <button id="backToMain" class="back-btn">‹</button>
+                    <h3>设置</h3>
+                </div>
             </div>
             <div class="modal-body">
                 <!-- 时间设置分组 -->
