pref: 简化设置按钮

--- a/source/popup.html
+++ b/source/popup.html
@@ -34,7 +34,7 @@
 
         <div class="footer">
             <div class="version">v1.0.0</div>
-            <button id="settingsBtn" class="btn btn-ghost settings-btn">⚙️</button>
+            <button id="settingsBtn" class="settings-btn" title="设置">⚙️</button>
         </div>
     </div>
 
